--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://YuriyTabinskuy.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -15,6 +16,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.3",
